Enviando uma tarefa que vai funcionar de primeira kkk
